test route attribute

--- a/WebApp1/Views/Home/About.cshtml
+++ b/WebApp1/Views/Home/About.cshtml
@@ -5,3 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
+
+
+
+<p>
+@Html.ActionLink("出版社", "Index", "Publisher") <br/>
+@Html.ActionLink("作者", "Index", "Author") <br/>
+@Guid.NewGuid()
+</p>
+
+
