--- a/WebApp1/Views/Author/Index.cshtml
+++ b/WebApp1/Views/Author/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<WebApp1.Models.Author>
+﻿@using PagedList
+@using PagedList.Mvc
+@model IEnumerable<WebApp1.Models.Author>
 
 @{
     ViewBag.Title = "Index";
@@ -49,3 +51,6 @@
 }
 
 </table>
+
+@* 分頁PagedList *@
+@Html.PagedListPager((IPagedList)Model, p => Url.Action("Index", new { page = p }))
