--- a/WebApp1/Views/Home/About.cshtml
+++ b/WebApp1/Views/Home/About.cshtml
@@ -9,6 +9,7 @@
 
 
 <p>
+@Html.ActionLink("書籍資料", "Index", "BookInfors") <br/>
 @Html.ActionLink("出版社", "Index", "Publisher") <br/>
 @Html.ActionLink("作者", "Index", "Author") <br/>
 @Guid.NewGuid()
